[package]
name = "dupfind"
version = "1.0.0"
description = "Duplicate Finder to identify and remove duplicate files"
readme = "README.md"
repository = "https://github.com/TheJeme/dupfind"
license = "MIT"
keywords = ["duplicate", "find", "file"]
categories = ["filesystem"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.5.0"
sha256 = "1.0.3"
